yaml/ghost-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
  generation: 1
  name: ghost-ingress
  namespace: default
spec:
  rules:
  - host: ghost-app.org
    http:
      paths:
      - backend:
          service:
            name: ghost-app-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ghost-app.org
    secretName: tls-ghost
